# mnlm

./: .env.template  .gitignore  Dockerfile  Dockerfile.dev  README.cn.md  README.md  developer.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-ros-docker.yaml
mnlm/client/: README.md  dummy_robot_arm_server.py  utils.py
mnlm/client/gpt_control/: assistant.py  command_indexer.py  dummy_command.py  robot_arm.py  tools.py  voice.py
mnlm/client/knowledge/: command_bank.json  dummy_command.json  robot_arm_api.md
mnlm/client/knowledge/index/: instructions.index  instructions_data.json
mnlm/robot/robot_arm_ws/: README.md
mnlm/robot/robot_arm_ws/src/robot_arm/: package.xml  setup.cfg  setup.py
mnlm/robot/robot_arm_ws/src/robot_arm/config/: robot_arm_control.yaml
mnlm/robot/robot_arm_ws/src/robot_arm/launch/: joint_move.launch.py  robot_arm_rviz.launch.py  robot_arm_sim.launch.py
mnlm/robot/robot_arm_ws/src/robot_arm/models/: arm.urdf  arm.xacro  example_gazebo.xacro  example_include.xacro  example_robot.urdf.xacro  gripper.xacro  world.sdf
mnlm/robot/robot_arm_ws/src/robot_arm/robot_arm/: command_dispatcher.py  command_dispatcher_node.py  command_receiver.py  joint_move.py  joint_mover.py  joint_mover_node.py
mnlm/robot/robot_arm_ws/src/robot_arm/rviz/: view_robot.rviz
resources/: .bashrc  .vimrc  setup_env.sh
tests/gpt_control/: test_robot_arm.py
